# certifiable-deploy

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTOR-LICENSE-AGREEMENT.md  Makefile  README.md  TEMPREADME.md  manifest  packages.manifest  repositories.manifest
.github/workflows/: ci.yml
certifiable-deploy/: .gitignore  buildfile  manifest
certifiable-deploy-tests/: .gitignore  manifest
certifiable-deploy-tests/unit/: buildfile  test_attest.c  test_audit.c  test_bundle.c  test_loader.c  test_target.c  test_verify.c
certifiable-deploy/include/: cd_attest.h  cd_loader.h  cd_manifest.h  cd_types.h
certifiable-deploy/src/attest/: merkle.c
certifiable-deploy/src/audit/: sha256.c
certifiable-deploy/src/bundle/: builder.c
certifiable-deploy/src/loader/: loader.c
certifiable-deploy/src/manifest/: manifest.c
docs/: CD-MATH-001.md
docs/requirements/: CD-STRUCT-001.md  SRS-002-ATTEST.md  SRS-003-TARGET.md  SRS-004-MANIFEST.md  SRS-005-VERIFY.md  SRS-006-LOADER.md
include/: buildfile  cd_audit.h  cd_bundle.h  cd_loader.h  cd_manifest.h  cd_target.h  cd_types.h  cd_verify.h
src/: buildfile
src/attest/: attest.c  merkle.c
src/audit/: domain_hash.c  sha256.c
src/bundle/: builder.c  path_normalize.c  reader.c
src/loader/: loader.c
src/manifest/: jcs.c  manifest.c
src/verify/: verify.c
tests/unit/: buildfile  test_attest  test_attest.c  test_audit  test_audit.c  test_bundle.c  test_loader.c  test_manifest.c  test_target  test_target.c  test_verify  test_verify.c
